Fix share buttons covering up text on mobile (#2)
There share buttons were obscuring a portion of blog post text. This PR
fixes that issue and fixes a small alignment issue in the footer as well
for mobile.

Fix #1

--- a/src/themes/linodians-2025/assets/css/mobile.scss
+++ b/src/themes/linodians-2025/assets/css/mobile.scss
@@ -31,6 +31,31 @@ main.single{
 			border-radius: 0;
 		}
 	}
+
+	div.share-buttons{
+		top: auto;
+		right: 0;
+		bottom: 0;
+		left: 0;
+		display: flex;
+
+		div,
+		a{
+			width: 100%;
+		}
+
+		div.share-down{
+			display: none;
+		}
+
+		div.share-right{
+			display: block;
+		}
+	}
+
+	body.section-blog.page{
+		padding-bottom: 48px; /* Make space for social share buttons. */
+	}
 }
 
 
